# autoflatten

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  autoflatten.py  helpers.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  publish.yml  run_tests.yml
autoflatten/: __init__.py  animation.py  cli.py  config.py  core.py  freesurfer.py  template.py  utils.py  viz.py
autoflatten/backends/: base.py  freesurfer.py  pyflatten.py
autoflatten/default_templates/: MLfs_cut_template.json  TZfs_cut_template.json  fsaverage_cuts_template.json
autoflatten/flatten/: __init__.py  algorithm.py  config.py  distance.py  energy.py  threading.py
autoflatten/tests/: conftest.py  test_animation.py  test_backends.py  test_cli.py  test_core.py  test_flatten.py  test_freesurfer.py  test_template.py  test_threading.py  test_viz.py
docs/: detailed-options.md  example-output.md  getting-started.md  index.md
examples/: README.md  custom_patch_example.py  example_geodesic_refinement.py
scripts/: .gitignore  20250430_compare_params.ipynb  20250510_run_mrisflatten_parameters.py  demo_flatten_animation.py  flatten_parser.py  make_fsaverage_cut_template.py  make_subject_cut_template.py  plot_all_flatmaps.py  plot_flat_patch.py  run_mrisflatten_parameters.py  test_mrisflatten_fs6_parameters.py  test_mrisflatten_parameters.py  test_native_medial_wall.py
