[metadata]
name = autoflatten
version = attr: autoflatten.__version__
description = Automatic Surface Flattening Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
author = autoflatten developers
author_email =
url =
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy
    networkx
    pycortex

[options.entry_points]
console_scripts =
    autoflatten = autoflatten.cli:main
